feat: add users endpoints and tests for controller
